#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(cpana-full, 20100819a, cpana@isl.rdc.toshiba.co.jp)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([cpana/constants.h])

AC_CONFIG_SUBDIRS(clpe ceap cpana apps)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
