#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(cpana-apps, 20100819a, cpana@isl.rdc.toshiba.co.jp)
AM_INIT_AUTOMAKE
AC_CONFIG_SUBDIRS(cpaa cpac)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
